; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_test9.c_Sqlitetest9_Init.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_test9.c_Sqlitetest9_Init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.anon = type { i8*, i32*, i8* }

@Sqlitetest9_Init.aObjCmd = internal global [3 x %struct.anon] [%struct.anon { i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i32 0, i32 0), i32* inttoptr (i64 129 to i32*), i8* null }, %struct.anon { i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i32 0, i32 0), i32* inttoptr (i64 128 to i32*), i8* null }, %struct.anon { i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.2, i32 0, i32 0), i32* inttoptr (i64 130 to i32*), i8* null }], align 16
@.str = private unnamed_addr constant [14 x i8] c"c_misuse_test\00", align 1
@.str.1 = private unnamed_addr constant [15 x i8] c"c_realloc_test\00", align 1
@.str.2 = private unnamed_addr constant [17 x i8] c"c_collation_test\00", align 1
@TCL_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @Sqlitetest9_Init(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  store i32 0, i32* %3, align 4
  br label %4

4:                                                ; preds = %26, %1
  %5 = load i32, i32* %3, align 4
  %6 = sext i32 %5 to i64
  %7 = icmp ult i64 %6, 3
  br i1 %7, label %8, label %29

8:                                                ; preds = %4
  %9 = load i32*, i32** %2, align 8
  %10 = load i32, i32* %3, align 4
  %11 = sext i32 %10 to i64
  %12 = getelementptr inbounds [3 x %struct.anon], [3 x %struct.anon]* @Sqlitetest9_Init.aObjCmd, i64 0, i64 %11
  %13 = getelementptr inbounds %struct.anon, %struct.anon* %12, i32 0, i32 0
  %14 = load i8*, i8** %13, align 8
  %15 = load i32, i32* %3, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds [3 x %struct.anon], [3 x %struct.anon]* @Sqlitetest9_Init.aObjCmd, i64 0, i64 %16
  %18 = getelementptr inbounds %struct.anon, %struct.anon* %17, i32 0, i32 1
  %19 = load i32*, i32** %18, align 8
  %20 = load i32, i32* %3, align 4
  %21 = sext i32 %20 to i64
  %22 = getelementptr inbounds [3 x %struct.anon], [3 x %struct.anon]* @Sqlitetest9_Init.aObjCmd, i64 0, i64 %21
  %23 = getelementptr inbounds %struct.anon, %struct.anon* %22, i32 0, i32 2
  %24 = load i8*, i8** %23, align 8
  %25 = call i32 @Tcl_CreateObjCommand(i32* %9, i8* %14, i32* %19, i8* %24, i32 0)
  br label %26

26:                                               ; preds = %8
  %27 = load i32, i32* %3, align 4
  %28 = add nsw i32 %27, 1
  store i32 %28, i32* %3, align 4
  br label %4

29:                                               ; preds = %4
  %30 = load i32, i32* @TCL_OK, align 4
  ret i32 %30
}

declare dso_local i32 @Tcl_CreateObjCommand(i32*, i8*, i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
